# mkdocs-auto-tags

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
mkdocs_auto_tags/: __init__.py  plugin.py
tests/: test_plugin.py
