[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-auto-tags"
version = "0.1.0"
description = "MkDocs plugin that automatically tags pages based on their navigation section"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "czarny" }]
keywords = ["mkdocs", "plugin", "tags", "navigation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
]
dependencies = ["mkdocs>=1.4"]

[project.urls]
Repository = "https://github.com/czarny/mkdocs-auto-tags"

[project.entry-points."mkdocs.plugins"]
auto-tags = "mkdocs_auto_tags.plugin:AutoTagsPlugin"
